doctor appointment fragment works as list, but has licked memory

--- a/app/src/main/res/layout/activity_apointments.xml
+++ b/app/src/main/res/layout/activity_apointments.xml
@@ -34,7 +34,11 @@
                 android:textColor="@color/white"
                 android:textStyle="normal" />
         </android.support.v7.widget.Toolbar>
-
+        <ListView
+            android:id="@+id/list_item"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
     </android.support.design.widget.AppBarLayout>
 
 
