doctor appointment fragment works as list, but has licked memory

--- a/app/src/main/res/layout/doctor_apointment_fragment.xml
+++ b/app/src/main/res/layout/doctor_apointment_fragment.xml
@@ -56,7 +56,7 @@
 
 
     <RatingBar
-        android:id="@+id/rating"
+        android:id="@+id/rating0"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_marginLeft="20dp"
@@ -99,7 +99,7 @@
         android:text="Location: San Luchia 08854, Rio Grande hospital, Colorado street 23"
         android:textColor="@color/black"
         android:textSize="18sp"
-        android:layout_below="@+id/rating"
+        android:layout_below="@+id/rating0"
         android:layout_alignLeft="@+id/doctorImage"
         android:layout_alignStart="@+id/doctorImage" />
 
