--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,20 +13,11 @@
     <style name="TextTheme" parent="@style/Theme.AppCompat.NoActionBar">
         <item name="android:textSize">20sp</item>
     </style>
-    <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
-
-        <item
-            android:id="@android:id/background"
-            android:drawable="@drawable/star_empty_show"/>
-
-        <item
-            android:id="@android:id/secondaryProgress"
-            android:drawable="@drawable/star_empty_show"/>
-
-        <item
-            android:id="@android:id/progress"
-            android:drawable="@drawable/star_filled_show"/>
-
-    </layer-list>
+    <style name="MyTabLayoutTextAppearance" parent="TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:fontFamily">sans-serif-light</item>
+    </style>
 
 </resources>
