--- a/app/src/main/res/layout/fragment_search_speciality.xml
+++ b/app/src/main/res/layout/fragment_search_speciality.xml
@@ -1,10 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView
-        android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    >
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/search"
+            android:id="@+id/textViewSearch"
+            android:textColor="@color/black"
+            android:layout_marginLeft="50dp"
+            android:textSize="26sp"/>
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/editText"
+            android:layout_weight="1"
+            android:textColor="@color/black"
+            />
+    </LinearLayout>
+
+    <ListView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="search by speciality"
-        android:textColor="@color/black"/>
+        android:id="@+id/listView"
+        android:layout_gravity="center_horizontal" />
+
+
 </LinearLayout>
