--- a/app/src/main/res/layout/fragment_serach_name.xml
+++ b/app/src/main/res/layout/fragment_serach_name.xml
@@ -24,6 +24,7 @@
             android:id="@+id/editTextSearchField"
             android:layout_weight="1"
             android:textColor="@color/black"
+            android:textSize="26sp"
             />
     </LinearLayout>
 
