--- a/app/src/main/res/layout/fragment_month_choose.xml
+++ b/app/src/main/res/layout/fragment_month_choose.xml
@@ -1,6 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:background="@color/white">
 
+
+    <com.squareup.timessquare.CalendarPickerView
+        android:id="@+id/calendar_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        app:tsquare_dayBackground="@color/white"
+        app:tsquare_dayTextColor="@color/black"
+        app:tsquare_dividerColor="@color/black"
+        app:tsquare_titleTextColor="@color/black"
+        app:tsquare_headerTextColor="@color/black"
+        />
 </LinearLayout>
