--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/black</item>
         <item name="android:colorForeground">@color/black</item>
-        <item name="android:windowBackground">@color/black</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
     </style>
     <style name="AppTheme2" parent="ThemeOverlay.AppCompat.Dark">
         <!-- Customize your theme here. -->
