--- a/app/src/main/res/layout/fragment_list_view_name.xml
+++ b/app/src/main/res/layout/fragment_list_view_name.xml
@@ -8,7 +8,8 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:onClick="onClick">
 
         <TextView
             android:layout_width="wrap_content"
