safety commit added search activity

--- a/app/src/main/res/layout/fragment_survey_doctor.xml
+++ b/app/src/main/res/layout/fragment_survey_doctor.xml
@@ -7,7 +7,8 @@
     android:longClickable="false"
     android:background="#fff"
     android:id="@+id/relativeLayout"
-    tools:context=".DoctorChooseTimeActivity">
+    tools:context=".DoctorChooseTimeActivity"
+    android:onClick="onClick">
 
     <ImageView
         android:scaleType="fitXY"
