--- a/app/src/main/res/layout/acivity_information.xml
+++ b/app/src/main/res/layout/acivity_information.xml
@@ -105,7 +105,8 @@
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    >
 
                     <TextView
                         android:layout_width="160dp"
@@ -118,8 +119,9 @@
                         android:textSize="22sp"/>
 
                     <RatingBar
+
                         android:layout_gravity="center_vertical"
-                        style="?android:attr/ratingBarStyleSmall"
+                        style="@style/StarRatingBar"
                         android:id="@+id/rating0"
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
@@ -132,8 +134,7 @@
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="">
+                    android:layout_height="wrap_content">
 
                     <TextView
                         android:layout_width="160dp"
@@ -148,8 +149,8 @@
                     <RatingBar
                         android:layout_gravity="center_vertical"
                         android:id="@+id/rating1"
-                        style="?android:attr/ratingBarStyleSmall"
-                        android:layout_height="wrap_content"
+                        style="@style/StarRatingBar"
+                        android:layout_height="fill_parent"
                         android:layout_width="wrap_content"
                         android:numStars="5"
                         android:rating="5"
@@ -174,11 +175,11 @@
                     <RatingBar
                         android:id="@+id/rating2"
                         android:layout_gravity="center_vertical"
-                        style="?android:attr/ratingBarStyleSmall"
+                        style="@style/StarRatingBar"
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:numStars="5"
-                        android:rating="5"
+                        android:rating="4"
                         android:isIndicator="true" />
 
                 </LinearLayout>
@@ -200,11 +201,11 @@
                     <RatingBar
                         android:id="@+id/rating3"
                         android:layout_gravity="center_vertical"
-                        style="?android:attr/ratingBarStyleSmall"
+                        style="@style/StarRatingBar"
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:numStars="5"
-                        android:rating="5"
+                        android:rating="3.5"
                         android:isIndicator="true" />
 
                 </LinearLayout>
@@ -226,7 +227,7 @@
                     <RatingBar
                         android:id="@+id/rating4"
                         android:layout_gravity="center_vertical"
-                        style="?android:attr/ratingBarStyleSmall"
+                        style="@style/StarRatingBar"
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:numStars="5"
