--- a/app/src/main/res/layout/acivity_information.xml
+++ b/app/src/main/res/layout/acivity_information.xml
@@ -8,7 +8,7 @@
     android:background="@color/colorPrimaryDark"
     android:fitsSystemWindows="true"
     app:popupTheme="@style/AppTheme"
-    tools:context=".Information">
+    >
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -123,12 +123,12 @@
                         android:layout_gravity="center_vertical"
                         style="@style/StarRatingBar"
                         android:id="@+id/rating0"
-                        android:layout_height="wrap_content"
+                        android:layout_height="50dp"
                         android:layout_width="wrap_content"
-                        android:numStars="5"
-                        android:rating="5"
+                        android:numStars="2"
+                        android:rating="0"
                         android:isIndicator="true"
-                        android:stepSize="0.1"
+                        android:stepSize="1"
                         android:theme="@style/Base.TextAppearance.AppCompat" />
                 </LinearLayout>
                 <LinearLayout
@@ -150,7 +150,7 @@
                         android:layout_gravity="center_vertical"
                         android:id="@+id/rating1"
                         style="@style/StarRatingBar"
-                        android:layout_height="fill_parent"
+                        android:layout_height="50dp"
                         android:layout_width="wrap_content"
                         android:numStars="5"
                         android:rating="5"
@@ -176,7 +176,7 @@
                         android:id="@+id/rating2"
                         android:layout_gravity="center_vertical"
                         style="@style/StarRatingBar"
-                        android:layout_height="wrap_content"
+                        android:layout_height="50dp"
                         android:layout_width="wrap_content"
                         android:numStars="5"
                         android:rating="4"
@@ -202,7 +202,7 @@
                         android:id="@+id/rating3"
                         android:layout_gravity="center_vertical"
                         style="@style/StarRatingBar"
-                        android:layout_height="wrap_content"
+                        android:layout_height="50dp"
                         android:layout_width="wrap_content"
                         android:numStars="5"
                         android:rating="3.5"
@@ -228,7 +228,7 @@
                         android:id="@+id/rating4"
                         android:layout_gravity="center_vertical"
                         style="@style/StarRatingBar"
-                        android:layout_height="wrap_content"
+                        android:layout_height="50dp"
                         android:layout_width="wrap_content"
                         android:numStars="5"
                         android:rating="5"
