--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -5,6 +5,6 @@
     <TextView
         android:id="@+id/testText"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
         android:textColor="@color/black"/>
 </LinearLayout>
