--- a/app/src/main/res/layout/fragment_serach_name.xml
+++ b/app/src/main/res/layout/fragment_serach_name.xml
@@ -31,9 +31,9 @@
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/listView"
-        android:layout_gravity="center_horizontal" />
+       />
 
 
 </LinearLayout>
