--- a/app/src/main/res/layout/acivity_information.xml
+++ b/app/src/main/res/layout/acivity_information.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:rb="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
     android:fitsSystemWindows="true"
-    app:popupTheme="@style/AppTheme"
     >
 
     <android.support.design.widget.AppBarLayout
@@ -44,68 +43,66 @@
 
             <ImageView
                 android:scaleType="fitXY"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:id="@+id/doctorImage"
                 android:src="@drawable/revolver"
-                android:layout_marginLeft="32dp"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="22dp"
+                android:layout_marginTop="40dp"
                 android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+                android:layout_centerHorizontal="true" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="8dp"
                 android:id="@+id/doctorName"
-                android:layout_alignTop="@+id/doctorImage"
-                android:layout_toRightOf="@+id/doctorImage"
-                android:layout_marginLeft="20dp"
                 android:text="Paul Eddison"
                 android:selectAllOnFocus="false"
                 android:textColor="@color/black"
-                android:textSize="22sp" />
+                android:textSize="22sp"
+                android:layout_below="@+id/doctorImage"
+                android:layout_centerHorizontal="true" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/speciality"
-                android:layout_marginTop="22dp"
-                android:text="Speciality: Oculist"
+                android:text="Oculist"
                 android:textColor="@color/black"
+                android:textSize="20sp"
                 android:layout_below="@+id/doctorName"
-                android:layout_alignLeft="@+id/doctorName"
-                android:layout_alignStart="@+id/doctorName"
-                android:textSize="20sp" />
+                android:layout_centerHorizontal="true" />
 
 
             <TextView
-                android:layout_marginTop="16dp"
-                android:layout_marginRight="16dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_marginRight="40dp"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 android:id="@+id/location"
-                android:text="Location: San Luchia 08854, Rio Grande hospital, Colorado street 23"
+                android:text="San Luchia 08854, Rio Grande hospital, Colorado street 23"
                 android:textColor="@color/black"
                 android:textSize="18sp"
-                android:layout_below="@+id/doctorImage"
-                android:layout_alignLeft="@+id/doctorImage"
-                android:layout_alignStart="@+id/doctorImage" />
+                android:layout_below="@+id/speciality"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
 
             <LinearLayout
                 android:orientation="vertical"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:layout_margin="32dp"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
                 android:layout_below="@+id/location"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true">
+                android:gravity="center_horizontal"
+                android:id="@+id/linearLayout2">
 
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
                     >
 
                     <TextView
@@ -116,25 +113,24 @@
                         android:text="@string/knowledge"
                         android:id="@+id/textView"
                         android:textColor="@color/black"
-                        android:textSize="22sp"/>
+                        android:textSize="22sp"
+                        />
 
-                    <RatingBar
-
-                        android:layout_gravity="center_vertical"
-                        style="@style/StarRatingBar"
+                    <in.flashbulb.coloredratingbar.ColoredRatingBar
+                        xmlns:rb="http://schemas.android.com/apk/res-auto"
+                        android:layout_gravity="center"
                         android:id="@+id/rating0"
-                        android:layout_height="50dp"
+                        style="@style/coloredRatingBarStyle"
                         android:layout_width="wrap_content"
-                        android:numStars="2"
-                        android:rating="0"
-                        android:isIndicator="true"
-                        android:stepSize="1"
-                        android:theme="@style/Base.TextAppearance.AppCompat" />
+                        android:layout_height="wrap_content"
+                        rb:rating="3.2"
+                        />
                 </LinearLayout>
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal">
 
                     <TextView
                         android:layout_width="160dp"
@@ -146,18 +142,18 @@
                         android:textColor="@color/black"
                         android:textSize="22sp"/>
 
-                    <RatingBar
-                        android:layout_gravity="center_vertical"
+                    <in.flashbulb.coloredratingbar.ColoredRatingBar
+                        android:layout_gravity="center"
+                        xmlns:rb="http://schemas.android.com/apk/res-auto"
                         android:id="@+id/rating1"
-                        style="@style/StarRatingBar"
-                        android:layout_height="50dp"
+                        style="@style/coloredRatingBarStyleIndicator"
                         android:layout_width="wrap_content"
-                        android:numStars="5"
-                        android:rating="5"
-                        android:isIndicator="true" />
+                        android:layout_height="wrap_content"
+                        rb:rating="3.2" />
 
                 </LinearLayout>
                 <LinearLayout
+                    android:gravity="center_horizontal"
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -172,19 +168,19 @@
                         android:textColor="@color/black"
                         android:textSize="22sp" />
 
-                    <RatingBar
+                    <in.flashbulb.coloredratingbar.ColoredRatingBar
+                        android:layout_gravity="center"
+                        xmlns:rb="http://schemas.android.com/apk/res-auto"
                         android:id="@+id/rating2"
-                        android:layout_gravity="center_vertical"
-                        style="@style/StarRatingBar"
-                        android:layout_height="50dp"
+                        style="@style/coloredRatingBarStyleIndicator"
                         android:layout_width="wrap_content"
-                        android:numStars="5"
-                        android:rating="4"
-                        android:isIndicator="true" />
+                        android:layout_height="wrap_content"
+                        rb:rating="3.2" />
 
                 </LinearLayout>
                 <LinearLayout
                     android:orientation="horizontal"
+                    android:gravity="center_horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
@@ -198,19 +194,19 @@
                         android:textColor="@color/black"
                         android:textSize="22sp" />
 
-                    <RatingBar
+                    <in.flashbulb.coloredratingbar.ColoredRatingBar
+                        android:layout_gravity="center"
+                        xmlns:rb="http://schemas.android.com/apk/res-auto"
                         android:id="@+id/rating3"
-                        android:layout_gravity="center_vertical"
-                        style="@style/StarRatingBar"
-                        android:layout_height="50dp"
+                        style="@style/coloredRatingBarStyleIndicator"
                         android:layout_width="wrap_content"
-                        android:numStars="5"
-                        android:rating="3.5"
-                        android:isIndicator="true" />
+                        android:layout_height="wrap_content"
+                        rb:rating="3.2" />
 
                 </LinearLayout>
                 <LinearLayout
                     android:orientation="horizontal"
+                    android:gravity="center_horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
@@ -224,21 +220,18 @@
                         android:textColor="@color/black"
                         android:textSize="22sp" />
 
-                    <RatingBar
+                    <in.flashbulb.coloredratingbar.ColoredRatingBar
+                        android:layout_gravity="center"
+                        xmlns:rb="http://schemas.android.com/apk/res-auto"
                         android:id="@+id/rating4"
-                        android:layout_gravity="center_vertical"
-                        style="@style/StarRatingBar"
-                        android:layout_height="50dp"
+                        style="@style/coloredRatingBarStyleIndicator"
                         android:layout_width="wrap_content"
-                        android:numStars="5"
-                        android:rating="5"
-                        android:isIndicator="true"/>
+                        android:layout_height="wrap_content"
+                        rb:rating="3.2" />
 
                 </LinearLayout>
+
             </LinearLayout>
-
-            <!--style="?android:attr/ratingBarStyleSmall"-->
-
         </RelativeLayout>
     </android.support.design.widget.AppBarLayout>
 
